--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ title : MMP
 <section>
     <section data-markdown="./pages/0-A-0_profiel.md" class="chapter-intro" data-background-color="#E90"></section>
     <section data-markdown="./pages/0-A-A_profiel_clip.md"></section>
+    <section data-markdown="./pages/A-0-0_wanm.md"></section>
+    <section data-markdown="./pages/B-0-0_av3.md"></section>
 </section>
 <section>
     <section data-markdown="./pages/A-A-0_jobs.md" class="chapter-intro" data-background-color="#0AC"></section>
