--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 layout: slide
 title : MMP
 ---
-<section>
-    <section data-markdown="./pages/0-0-0_gdm.md" class="home-page"></section>
+<section class="slides__chapter">
+    <section data-markdown="./pages/0-0-0_gdm.md" class="slides__homepage"></section>
 </section>
-<section>
-    <section data-markdown="./pages/0-A-0_profiel.md" class="chapter-intro" data-background-color="#E90"></section>
+<section class="slides__chapter slides__chapter--profile">
+    <section data-markdown="./pages/0-A-0_profiel.md" class="slides__chapter-intro" data-background-color="#E90"></section>
     <section data-markdown="./pages/0-A-A_profiel_clip.md"></section>
     <section data-markdown="./pages/A-0-0_wanm.md"></section>
     <section data-markdown="./pages/B-0-0_av3.md"></section>
 </section>
-<section>
-    <section data-markdown="./pages/A-A-0_jobs.md" class="chapter-intro" data-background-color="#0AC"></section>
+<section class="slides__chapter slides__chapter--jobs">
+    <section data-markdown="./pages/A-A-0_jobs.md" class="slides__chapter-intro" data-background-color="#0AC"></section>
     <section data-markdown="./pages/A-A-A_jobs_web.md"></section>
     <section data-markdown="./pages/A-A-B_jobs_mobile.md"></section>
     <section data-markdown="./pages/A-A-C_jobs_cms.md"></section>
     <section data-markdown="./pages/A-A-D_jobs_verder.md"></section>
 </section>
-<section>
-    <section data-markdown="./pages/A-B-0_inhoud.md" class="chapter-intro" data-background-color="#C07"></section>
+<section class="slides__chapter">
+    <section data-markdown="./pages/A-B-0_inhoud.md" class="slides__chapter-intro" data-background-color="#C07"></section>
     <section data-markdown="./pages/A-B-A_inhoud_ontwerpen.md"></section>
     <section data-markdown="./pages/A-B-B_inhoud_coderen.md"></section>
     <section data-markdown="./pages/A-B-C_inhoud_templating.md"></section>
@@ -31,14 +31,18 @@ title : MMP
     <section data-markdown="./pages/A-B-I_inhoud_data.md"></section>
     <section data-markdown="./pages/A-B-J_inhoud_data.md"></section>
 </section>
-<section>
-    <section data-markdown="./pages/A-C-0_programma.md" class="chapter-intro" data-background-color="#BC0"></section>
-    <section data-markdown="./pages/A-C-A_programma_1e-schijf.md"></section>
-    <section data-markdown="./pages/A-C-B_programma_1e-schijf.md"></section>
-    <section data-markdown="./pages/A-C-C_programma_2e-schijf.md"></section>
-    <section data-markdown="./pages/A-C-D_programma_2e-schijf.md"></section>
-    <section data-markdown="./pages/A-C-E_programma_2e-schijf.md"></section>
-    <section data-markdown="./pages/A-C-G_programma_3e-schijf.md"></section>
-    <section data-markdown="./pages/A-C-H_programma_3e-schijf.md"></section>
-    <section data-markdown="./pages/A-C-I_programma_3e-schijf.md"></section>
+<section class="slides__chapter slides__chapter--programma">
+    <section data-markdown="./pages/0-C-0_programma.md" class="slides__chapter-intro" data-background-color="#BC0"></section>
+    <section data-markdown="./pages/0-C-A_programma_1e-schijf.md"></section>
+    <section data-markdown="./pages/0-C-C_programma_2e-schijf.md"></section>
+    <section data-markdown="./pages/0-C-D_programma_2e-schijf.md"></section>
+    <section data-markdown="./pages/0-C-E_programma_3e-schijf.md"></section>
+</section>
+<section class="slides__chapter slides__chapter--programma">
+    <section data-markdown="./pages/A-C-0_programma.md" class="slides__chapter-intro" data-background-color="#BC0"></section>
+</section>
+<section class="slides__chapter slides__chapter--programma">
+    <section data-markdown="./pages/B-C-0_programma.md" class="slides__chapter-intro" data-background-color="#BC0"></section>
+    <section data-markdown="./pages/B-C-M_programma_specifiek_2e-schijf.md"></section>
+    <section data-markdown="./pages/B-C-O_programma_specifiek_3e-schijf.md"></section>
 </section>
