--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title : MMP
     <section data-markdown="./pages/A-A-C_jobs_cms.md"></section>
     <section data-markdown="./pages/A-A-D_jobs_verder.md"></section>
 </section>
-<section class="slides__chapter">
+<section class="slides__chapter slides__chapter--inhoud">
     <section data-markdown="./pages/A-B-0_inhoud.md" class="slides__chapter-intro" data-background-color="#C07"></section>
     <section data-markdown="./pages/A-B-A_inhoud_ontwerpen.md"></section>
     <section data-markdown="./pages/A-B-B_inhoud_coderen.md"></section>
@@ -40,6 +40,8 @@ title : MMP
 </section>
 <section class="slides__chapter slides__chapter--programma">
     <section data-markdown="./pages/A-C-0_programma.md" class="slides__chapter-intro" data-background-color="#BC0"></section>
+    <section data-markdown="./pages/A-C-M_programma_specifiek_2e-schijf.md"></section>
+    <section data-markdown="./pages/A-C-O_programma_specifiek_3e-schijf.md"></section>
 </section>
 <section class="slides__chapter slides__chapter--programma">
     <section data-markdown="./pages/B-C-0_programma.md" class="slides__chapter-intro" data-background-color="#BC0"></section>
