--- a/index.html
+++ b/index.html
@@ -14,22 +14,18 @@ title : MMP
 <section class="slides__chapter slides__chapter--jobs">
     <section data-markdown="./pages/A-A-0_jobs.md" class="slides__chapter-intro" data-background-color="#0AC"></section>
     <section data-markdown="./pages/A-A-A_jobs_web.md"></section>
-    <section data-markdown="./pages/A-A-B_jobs_mobile.md"></section>
     <section data-markdown="./pages/A-A-C_jobs_cms.md"></section>
+    <section data-markdown="./pages/B-A-A_jobs.md"></section>
     <section data-markdown="./pages/A-A-D_jobs_verder.md"></section>
 </section>
 <section class="slides__chapter slides__chapter--inhoud">
     <section data-markdown="./pages/A-B-0_inhoud.md" class="slides__chapter-intro" data-background-color="#C07"></section>
-    <section data-markdown="./pages/A-B-A_inhoud_ontwerpen.md"></section>
-    <section data-markdown="./pages/A-B-B_inhoud_coderen.md"></section>
-    <section data-markdown="./pages/A-B-C_inhoud_templating.md"></section>
-    <section data-markdown="./pages/A-B-D_inhoud_programmeren.md"></section>
-    <section data-markdown="./pages/A-B-E_inhoud_cms.md"></section>
-    <section data-markdown="./pages/A-B-F_inhoud_versiebeheersystemen.md"></section>
-    <section data-markdown="./pages/A-B-G_inhoud_workflowautomatisatie.md"></section>
-    <section data-markdown="./pages/A-B-H_inhoud_testen.md"></section>
-    <section data-markdown="./pages/A-B-I_inhoud_data.md"></section>
-    <section data-markdown="./pages/A-B-J_inhoud_data.md"></section>
+    <section data-markdown="./pages/A-B-K_inhoud_wanm.md"></section>
+    <section data-markdown="./pages/A-B-L_inhoud_wanm.md"></section>
+    <section data-markdown="./pages/A-B-M_inhoud_wanm.md"></section>
+    <section data-markdown="./pages/A-B-N_inhoud_wanm.md"></section>
+    <section data-markdown="./pages/B-B-A_av.md"></section>
+    <section data-markdown="./pages/B-B-B_av.md"></section>
 </section>
 <section class="slides__chapter slides__chapter--programma">
     <section data-markdown="./pages/0-C-0_programma.md" class="slides__chapter-intro" data-background-color="#BC0"></section>
